# alertmanager

./: .gitignore  .gs-project.yml  BUILD  Makefile  WORKSPACE  WORKSPACE.local  deps.bzl  go.mod
api/: BUILD.bazel
api/metrics/: BUILD.bazel
api/v1/: BUILD.bazel  api.go
api/v2/: BUILD.bazel  api.go  openapi.yaml
api/v2/client/: BUILD.bazel
api/v2/client/alert/: BUILD.bazel
api/v2/client/alertgroup/: BUILD.bazel
api/v2/client/general/: BUILD.bazel
api/v2/client/receiver/: BUILD.bazel
api/v2/client/silence/: BUILD.bazel  delete_silence_parameters.go  delete_silence_responses.go
api/v2/models/: BUILD.bazel  silence.go
api/v2/restapi/: BUILD.bazel  embedded_spec.go
api/v2/restapi/operations/: BUILD.bazel
api/v2/restapi/operations/alert/: BUILD.bazel
api/v2/restapi/operations/alertgroup/: BUILD.bazel
api/v2/restapi/operations/general/: BUILD.bazel
api/v2/restapi/operations/receiver/: BUILD.bazel
api/v2/restapi/operations/silence/: BUILD.bazel  delete_silence_parameters.go  delete_silence_responses.go
asset/: BUILD.bazel  assets_vfsdata.go
cli/: BUILD.bazel  silence_add.go  silence_expire.go  silence_update.go
cli/config/: BUILD.bazel
cli/format/: BUILD.bazel
cluster/: BUILD.bazel
cluster/clusterpb/: BUILD.bazel
cmd/alertmanager/: BUILD.bazel  main.go
cmd/amtool/: BUILD.bazel
config/: BUILD.bazel  config.go  notifiers.go
dispatch/: BUILD.bazel  dispatch.go
doc/alertmanager-mixin/: Makefile
examples/webhook/: BUILD.bazel
inhibit/: BUILD.bazel
nflog/: BUILD.bazel
nflog/nflogpb/: BUILD.bazel
notify/: BUILD.bazel
notify/discord/: BUILD.bazel
notify/email/: BUILD.bazel
notify/msteams/: BUILD.bazel
notify/opsgenie/: BUILD.bazel
notify/pagerduty/: BUILD.bazel  pagerduty.go  pagerduty_test.go
notify/pushover/: BUILD.bazel
notify/slack/: BUILD.bazel
notify/sns/: BUILD.bazel
notify/telegram/: BUILD.bazel
notify/test/: BUILD.bazel
notify/victorops/: BUILD.bazel
notify/webex/: BUILD.bazel
notify/webhook/: BUILD.bazel  webhook.go
notify/wechat/: BUILD.bazel
pkg/labels/: BUILD.bazel
pkg/modtimevfs/: BUILD.bazel
provider/: BUILD.bazel
provider/mem/: BUILD.bazel
silence/: BUILD.bazel
silence/silencepb/: BUILD.bazel
store/: BUILD.bazel
template/: BUILD.bazel  Makefile
test/cli/: BUILD.bazel
test/cli/acceptance/: BUILD.bazel
test/with_api_v1/: BUILD.bazel
test/with_api_v1/acceptance/: BUILD.bazel
test/with_api_v2/: BUILD.bazel  acceptance.go  mock.go
test/with_api_v2/acceptance/: BUILD.bazel  silence_test.go
timeinterval/: BUILD.bazel
types/: BUILD.bazel  types.go
ui/: BUILD.bazel
ui/app/: Makefile
ui/app/src/: Main.elm  Types.elm  Updates.elm
ui/app/src/Data/: PostableSilence.elm
ui/app/src/Silences/: Types.elm
ui/app/src/Views/SilenceForm/: Views.elm
