load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "asset",
    srcs = [
        "assets_vfsdata.go",
        "doc.go",
    ],
    importpath = "github.com/prometheus/alertmanager/asset",
    visibility = ["//visibility:public"],
    deps = ["@com_github_shurcool_vfsgen//:vfsgen"],
)

alias(
    name = "go_default_library",
    actual = ":asset",
    visibility = ["//visibility:public"],
)
