load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "coordinator.go",
        "notifiers.go",
    ],
    importpath = "github.com/prometheus/alertmanager/config",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/labels",
        "//timeinterval",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common_sigv4//:sigv4",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

alias(
    name = "go_default_library",
    actual = ":config",
    visibility = ["//visibility:public"],
)

go_test(
    name = "config_test",
    srcs = [
        "config_test.go",
        "coordinator_test.go",
        "notifiers_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":config"],
    deps = [
        "@com_github_go_kit_log//:log",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)
