load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "provider",
    srcs = ["provider.go"],
    importpath = "github.com/prometheus/alertmanager/provider",
    visibility = ["//visibility:public"],
    deps = [
        "//types",
        "@com_github_prometheus_common//model",
    ],
)

alias(
    name = "go_default_library",
    actual = ":provider",
    visibility = ["//visibility:public"],
)
