load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "types",
    srcs = ["types.go"],
    importpath = "github.com/prometheus/alertmanager/types",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/labels",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//model",
    ],
)

alias(
    name = "go_default_library",
    actual = ":types",
    visibility = ["//visibility:public"],
)

go_test(
    name = "types_test",
    srcs = ["types_test.go"],
    embed = [":types"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
    ],
)
