load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ui",
    srcs = ["web.go"],
    importpath = "github.com/prometheus/alertmanager/ui",
    visibility = ["//visibility:public"],
    deps = [
        "//asset",
        "@com_github_go_kit_log//:log",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_prometheus_common//route",
    ],
)

alias(
    name = "go_default_library",
    actual = ":ui",
    visibility = ["//visibility:public"],
)
