load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "metrics",
    srcs = ["metrics.go"],
    importpath = "github.com/prometheus/alertmanager/api/metrics",
    visibility = ["//visibility:public"],
    deps = ["@com_github_prometheus_client_golang//prometheus"],
)

alias(
    name = "go_default_library",
    actual = ":metrics",
    visibility = ["//visibility:public"],
)
