load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "api.go",
        "compat.go",
        "testing.go",
    ],
    importpath = "github.com/prometheus/alertmanager/api/v2",
    visibility = ["//visibility:public"],
    deps = [
        "//api/metrics",
        "//api/v2/models",
        "//api/v2/restapi",
        "//api/v2/restapi/operations",
        "//api/v2/restapi/operations/alert",
        "//api/v2/restapi/operations/alertgroup",
        "//api/v2/restapi/operations/general",
        "//api/v2/restapi/operations/receiver",
        "//api/v2/restapi/operations/silence",
        "//cluster",
        "//config",
        "//dispatch",
        "//pkg/labels",
        "//provider",
        "//silence",
        "//silence/silencepb",
        "//types",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_go_openapi_analysis//:analysis",
        "@com_github_go_openapi_loads//:loads",
        "@com_github_go_openapi_runtime//middleware",
        "@com_github_go_openapi_strfmt//:strfmt",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common//version",
        "@com_github_rs_cors//:cors",
        "@com_github_stretchr_testify//require",
    ],
)

alias(
    name = "go_default_library",
    actual = ":api",
    visibility = ["//visibility:public"],
)

go_test(
    name = "api_test",
    srcs = ["api_test.go"],
    embed = [":api"],
    deps = [
        "//api/v2/models",
        "//api/v2/restapi/operations/general",
        "//api/v2/restapi/operations/silence",
        "//config",
        "//pkg/labels",
        "//silence",
        "//silence/silencepb",
        "//types",
        "@com_github_go_kit_log//:log",
        "@com_github_go_openapi_runtime//:runtime",
        "@com_github_go_openapi_strfmt//:strfmt",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
    ],
)
