load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "http_config.go",
    ],
    importpath = "github.com/prometheus/alertmanager/cli/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_prometheus_common//config",
        "@in_gopkg_alecthomas_kingpin_v2//:kingpin_v2",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

alias(
    name = "go_default_library",
    actual = ":config",
    visibility = ["//visibility:public"],
)

go_test(
    name = "config_test",
    srcs = ["config_test.go"],
    data = glob(["testdata/**"]),
    embed = [":config"],
    deps = ["@in_gopkg_alecthomas_kingpin_v2//:kingpin_v2"],
)
