load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "webhook_lib",
    srcs = ["echo.go"],
    importpath = "github.com/prometheus/alertmanager/examples/webhook",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "webhook",
    embed = [":webhook_lib"],
    visibility = ["//visibility:public"],
)
