load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "email",
    srcs = ["email.go"],
    importpath = "github.com/prometheus/alertmanager/notify/email",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//notify",
        "//template",
        "//types",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_common//config",
    ],
)

alias(
    name = "go_default_library",
    actual = ":email",
    visibility = ["//visibility:public"],
)

go_test(
    name = "email_test",
    srcs = ["email_test.go"],
    data = glob(["testdata/**"]),
    embed = [":email"],
    deps = [
        "//config",
        "//template",
        "//types",
        "@com_github_go_kit_log//:log",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)
