load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "msteams",
    srcs = ["msteams.go"],
    importpath = "github.com/prometheus/alertmanager/notify/msteams",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//notify",
        "//template",
        "//types",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
    ],
)

alias(
    name = "go_default_library",
    actual = ":msteams",
    visibility = ["//visibility:public"],
)

go_test(
    name = "msteams_test",
    srcs = ["msteams_test.go"],
    embed = [":msteams"],
    deps = [
        "//config",
        "//notify",
        "//notify/test",
        "//types",
        "@com_github_go_kit_log//:log",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
    ],
)
