load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pagerduty",
    srcs = ["pagerduty.go"],
    importpath = "github.com/prometheus/alertmanager/notify/pagerduty",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//notify",
        "//template",
        "//types",
        "@com_github_alecthomas_units//:units",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
    ],
)

alias(
    name = "go_default_library",
    actual = ":pagerduty",
    visibility = ["//visibility:public"],
)

go_test(
    name = "pagerduty_test",
    srcs = ["pagerduty_test.go"],
    embed = [":pagerduty"],
    deps = [
        "//config",
        "//notify",
        "//notify/test",
        "//types",
        "@com_github_go_kit_log//:log",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
    ],
)
